fix(ux): fix details' height and set overflow-y to auto for responsive mobile rendering

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -165,7 +165,7 @@ body {
 /* myDETAILS */
 .details{
     width: 100%;
-    height: 90vh;
+    min-height: 90vh;
     border-image: 1 fill linear-gradient( rgba(255, 255, 255, 0.001), rgba(255, 255, 255, 0.002),rgba(36, 37, 37, 0.8), rgba(36, 37, 42, 1));
     background-size: cover;
     background-position: center;
@@ -173,7 +173,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: end;
-    overflow: hidden;
+    overflow-y: auto;
     padding: 1rem; 
     font-size: 20px;
     p{
